# atlasreader

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MNI_atlas_reader.ipynb  README.md  atlas_reader.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: format.yml  tests.yml  update_precommit_hooks.yml  validation.yml
atlases/: atlas_Neuromorphometrics.mgz  atlas_aal.mgz  description_HarvardOxford.rst  description_Juelich.txt  description_Neuromorphometrics.txt  description_aal.txt  description_freesurfer.txt  labels_Juelich.csv  labels_aal.csv  labels_freesurfer.csv
atlasreader/: __init__.py  _version.py  atlasreader.py  cli.py  info.py
atlasreader/data/: README.md  prepare_atlases.py
atlasreader/data/atlases/: labels_aal.csv  labels_aicha.csv  labels_destrieux.csv  labels_harvard_oxford.csv  labels_juelich.csv  labels_marsatlas.csv  labels_schaefer_200.csv  labels_talairach.csv  labels_talairach_ba.csv  labels_talairach_gyrus.csv
atlasreader/tests/: conftest.py  test_atlasreader.py  test_cli.py  utils.py
atlasreader/tests/data/collection_658/: collection_metadata.json  image_10426_metadata.json
mni_atlas_reader/: __init__.py  atlas_reader.py  cli.py  info.py
mni_atlas_reader/data/atlases/: labels_Neuromorphometrics.csv  labels_desikan_killiany.csv  labels_harvard_oxford.csv
mni_atlas_reader/tests/: test_atlas_reader.py  utils.py
notebooks/: .gitignore  atlasreader.ipynb  mni_atlas_reader.ipynb
paper/: paper.bib  paper.md  script_create_template_overlays.py
